# fastapi-mcp-inspect

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/fastapi_mcp_inspect/: __init__.py  inspect.py
