[project]
name = "fastapi-mcp-inspect"
version = "0.1.0"
description = "Simple tool which mounts your fastapi application and exposes an mcp endpoint for AI agents to inspect your fastapi server."
readme = "README.md"
authors = [
    { name = "Adarsh Dubey", email = "dubeyadarshmain@gmail.com" }
]
requires-python = ">=3.11"
keywords = ["fastapi", "mcp", "ai", "inspect", "llm"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "fastapi>=0.138.0",
    "fastmcp>=3.4.2",
]

[project.urls]
Homepage = "https://github.com/inclinedadarsh/fastapi-mcp-inspect"
Repository = "https://github.com/inclinedadarsh/fastapi-mcp-inspect"
Issues = "https://github.com/inclinedadarsh/fastapi-mcp-inspect/issues"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.19",
]

[tool.ruff]
line-length = 88
target-version = "py314"

lint.select = [
  "E",
  "F",
  "W",
  "I",
  "UP",
  "B",
  "SIM",
  "C4",
  "TCH"
]

lint.ignore = ["B008"]
